Regression: Custom node remains undefined after running script #120084

Closed
opened 2024-03-30 10:25:30 +01:00 by Samran Raafat · 2 comments

System Information
Operating system: macOS-12.7.3-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Pro 1.2

Blender Version
Broken: version: 4.1.0, branch: blender-v4.1-release, commit date: 2024-03-25 20:42, hash: 40a5e739e270
Worked: 4.0

the undefined node is custom node created by Test.py script and the file saved
in blender 4.0.1 wan I run the script the node will defined and work but in blender 4.1 well not

Steps to reproduce
open blend file, run python script

**System Information** Operating system: macOS-12.7.3-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 Pro 1.2 **Blender Version** Broken: version: 4.1.0, branch: blender-v4.1-release, commit date: 2024-03-25 20:42, hash: `40a5e739e270` Worked: 4.0 the undefined node is custom node created by Test.py script and the file saved in blender 4.0.1 wan I run the script the node will defined and work but in blender 4.1 well not **Steps to reproduce** open blend file, run python script
Samran Raafat added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2024-03-30 10:25:30 +01:00

Can confirm, Technically this is regression, so will assign high prio.

Can confirm, Technically this is regression, so will assign high prio.
Richard Antalik changed title from custom node undefined to Regression: Custom node remains undefined after running script 2024-03-31 12:48:04 +02:00
Richard Antalik added
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2024-03-31 12:48:59 +02:00
Iliya Katushenock added the
Module
Nodes & Physics
Interest
Python API
labels 2024-03-31 13:26:13 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-02 16:08:13 +02:00

Correcting this regression seems to have solved a similar custom node issue that we have been noticing starting with Blender LTS 3.6.8 up to the current 3.6.11 (seeing the node back to working in 4.0 had been a nice surprise, crushed by 4.1.0).

Is this specific bug understood to be present in these latest Blender 3.6 LTS versions, then? If so, will it be addressed there, too?

Correcting this regression seems to have solved a similar custom node issue that we have been noticing starting with Blender LTS 3.6.8 up to the current 3.6.11 (seeing the node back to working in 4.0 had been a nice surprise, crushed by 4.1.0). Is this specific bug understood to be present in these latest Blender 3.6 LTS versions, then? If so, will it be addressed there, too?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#120084
No description provided.