Fix #120084: custom group node remains undefined after registering node type